--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.19",
+    "nanoid": "^5.1.6",
     "next": "^15.5.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
