--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -30,8 +30,10 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
+    "roughjs": "^4.6.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "uuid": "^13.0.0",
     "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
