--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,6 +25,7 @@
     "nanoid": "^5.1.6",
     "next": "^15.5.0",
     "next-themes": "^0.4.6",
+    "perfect-freehand": "^1.2.2",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
