--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ws": "^8.18.1",
+    "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.3"
   },
