--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4"
   },
   "devDependencies": {
     "@repo/common": "workspace:*",
