--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -16,6 +16,7 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@repo/kafka": "workspace:*",
     "@repo/common": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
