--- a/packages/kafka/package.json
+++ b/packages/kafka/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "@repo/db": "workspace:*"
   },
   "keywords": [],
   "author": "",
