--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@repo/common",
   "version": "1.0.0",
-  "main": "./dist/index.js",
+  "main": "./dist/types.js",
   "type": "module",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types.d.ts",
   "exports": {
     "./types": {
       "import": "./dist/types.js",
