--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "buildCommand": "pnpm turbo run build --filter=frontend",
-  "installCommand": "pnpm install",
-  "outputDirectory": "apps/frontend/.next"
+  "buildCommand": "pnpm run build",
+  "outputDirectory": ".next"
 }
