--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@repo/common",
   "version": "1.0.0",
+  "private": true,
   "main": "./dist/types.js",
   "type": "module",
   "types": "./dist/types.d.ts",
